--- a/package.json
+++ b/package.json
@@ -1,25 +1,45 @@
 {
-  "name": "expense-tracker",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "18.15.13",
-    "@types/react": "18.0.37",
-    "@types/react-dom": "18.0.11",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
-    "next": "13.3.0",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
-  }
+    "name": "expense-tracker",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@commitlint/cli": "16.2.3",
+        "@commitlint/config-conventional": "16.2.1",
+        "@tanstack/react-query": "^4.22.0",
+        "@types/node": "18.15.13",
+        "@types/react": "18.0.37",
+        "@types/react-dom": "18.0.11",
+        "@typescript-eslint/eslint-plugin": "5.18.0",
+        "@typescript-eslint/parser": "5.18.0",
+        "autoprefixer": "10.4.14",
+        "axios": "^1.1.3",
+        "commitizen": "4.2.4",
+        "cz-conventional-changelog": "3.3.0",
+        "eslint": "8.38.0",
+        "eslint-config-next": "13.3.0",
+        "eslint-config-prettier": "8.5.0",
+        "eslint-import-resolver-typescript": "2.7.1",
+        "eslint-plugin-prettier": "4.0.0",
+        "husky": "7.0.4",
+        "lint-staged": "12.3.7",
+        "next": "13.3.0",
+        "postcss": "8.4.23",
+        "prettier": "^2.8.8",
+        "prettier-plugin-tailwindcss": "^0.2.7",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "tailwindcss": "3.3.1",
+        "typescript": "5.0.4"
+    },
+    "config": {
+        "commitizen": {
+            "path": "cz-conventional-changelog"
+        }
+    }
 }
